style.css
@font-face {
    font-family: zrnic;
    src: url('zrnic.otf');
}

@font-face {
    font-family: CAT;
    src: url('CAT-North-Licht.ttf');
}

*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}

#logo-wrapper{
    text-align: center;
    font-size: 250px;
    width:100%;
    height:100vh;
    height:100svh;
    display: grid;
    place-content: center;
}

#logo{
    position:relative;
    padding-top: 25px;
}

#asterisk{
    font-family: zrnic;
    color:blue;
    position: relative;
}

#i{
    display:inline-block;
    position:relative;
    bottom:15px;
    transform: scaleY(0.75);
    transform-origin: bottom;
}

#spinning{
    color:red;
    position:absolute;
    right:253px;
    top:-20px;
    animation: spin 30s linear infinite;
}

#software{
    font-size: 150px;
    color: #777;
    font-size: 120px;
    position:relative;
    bottom:60px;
    font-family: CAT;
    font-weight: 100;
}

#url{
    font-size: 40px;
    font-family: sans-serif;
    position: relative;
    bottom:60px;
}

#copy{
    font-size: 10px;
    position:absolute;
    bottom:0;
    left:50%;
    transform: translateX(-50%);
}

.spoke{
    height:100px;
    width:15px;
    background:red;
}

#spoke2{
    transform:rotate(60deg)
}

#spoke3{
    transform:rotate(60deg)
}
#spin{
    /* background: blue; */
    /* transform-origin: center; */
    /* animation: turn 3s linear infinite; */
}

#progress-bar{
    width:300px;
    height:50px;
    border:1px solid black;
    margin:0 auto;
    border-radius: 50px;
    overflow: hidden;
}

#progress{
    background:grey;
    width:300px;
    height:50px;
    position:relative;
    transform: translateX(-101%);
    animation: loading 5s ease-in-out 2s forwards;
}

@keyframes loading {
    from{
        transform: translateX(-101%);
    }to{
        transform: translateX(0);
    }
}
@keyframes spin{
    from{
        transform: rotate(0deg);
    }to{
        transform: rotate(360deg);
    }
}

@media (max-width:800px){
   #logo{
    zoom:0.75
   }
}
    
@media (max-width:600px){
   #logo{
    zoom:0.5
   }
}
    
@media (max-width:400px){
   #logo{
    zoom:0.25
   }
}
    

